Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36489

10.11 crashes during bootstrap on macOS

    XMLWordPrintable

Details

    Description

      10.11 git sha 58a36773090223c97d814a07d57ab35ebf803cc5 crashes during bootstrap on macOS, when built as Debug:

      0   mariadbd                            0x0000000105ab4594 pthread_mutex_wrapper<false>::init() + 140
      0   mariadbd                            0x0000000105aa2534 sux_lock<ssux_lock_impl<true>>::init() + 304
      0   mariadbd                            0x0000000105aae38c buf_block_t::initialise(page_id_t, unsigned long, unsigned int) + 200
      0   mariadbd                            0x0000000105aaeaa0 buf_page_create_low(page_id_t, unsigned long, mtr_t*, buf_block_t*) + 456
      0   mariadbd                            0x0000000105aae808 buf_page_create(fil_space_t*, unsigned int, unsigned long, mtr_t*, buf_block_t*) + 96
      0   mariadbd                            0x0000000105b76720 fsp_header_init(fil_space_t*, unsigned int, mtr_t*) + 116
      0   mariadbd                            0x0000000105e589e4 srv_start(bool) + 4392
      0   mariadbd                            0x0000000105c09b2c innodb_init(void*) + 1500
      0   mariadbd                            0x00000001050b5dc0 ha_initialize_handlerton(void*) + 376
      0   mariadbd                            0x00000001055047a8 plugin_do_initialize(st_plugin_int*, unsigned int&) + 492
      0   mariadbd                            0x0000000105504098 plugin_initialize(st_mem_root*, st_plugin_int*, int*, char**, bool) + 792
      0   mariadbd                            0x000000010550368c plugin_init(int*, char**, int) + 3088
      0   mariadbd                            0x00000001052f20dc init_server_components() + 3060
      0   mariadbd                            0x00000001052ee868 mysqld_main(int, char**) + 1516
      0   mariadbd                            0x0000000104fceeb4 main + 36
      0   dyld                                0x0000000192240274 start + 2840
      

      This is like the bug fixed in git sha 1c8af2ae53a3a48d64b4167d21b20ff5e1caef36 so perhaps there is a newly added codepath where the mutex initialization is not invoked.

      Attachments

        Activity

          People

            marko Marko Mäkelä
            Gosselin Dave Gosselin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.